# ModernCFD

./: README.md
codes/1d/02/: main.cpp
codes/1d/03/: main.cpp
codes/1d/04/: CMakeLists.txt  main.cpp
codes/1d/05/: main.cpp
codes/1d/06/: main.cpp
codes/1d/07/: main.cpp
codes/1d/08/: main.cpp
codes/1d/09/: main.cpp
codes/1d/10/: main.cpp
codes/1d/11/: main.cpp
codes/1d/12/: main.cpp
codes/1d/13/: main.cpp
codes/1d/14/: main.cpp
codes/1d/15/: TimeSpan.h  main.cpp
codes/1d/16/: CMakeLists.txt  README.txt  TimeSpan.cpp  main.cpp
codes/1d/17/: main.cpp
codes/1d/18/: TimeOmp.cpp  main.cpp
codes/1d/19/: CMakeLists.txt  TimeOmp.h  main.cpp
codes/LinearConvection/00/: CMakeLists.txt  computeGpu.cu  computeGpu.h  main.cpp
codes/LinearConvection/01/: CMakeLists.txt  Grid.cpp  README.txt
codes/LinearConvection/02/: Grid.cpp  Grid.h  README.txt  main.cpp
codes/LinearConvection/03/: CMakeLists.txt  README.txt  addConstantGpu.h  main.cpp
codes/LinearConvection/04/: Grid.cpp  Grid.h  computeGpu.cu  main.cpp
codes/LinearConvection/05/: Grid.cpp  Grid.h  README.txt  main.cpp
codes/LinearConvection/06/: Grid.cpp  Grid.h  main.cpp
codes/LinearConvection/07/: Grid.cpp  Grid.h  README.txt  main.cpp
codes/LinearConvection/08/: Grid.cpp  Grid.h  README.txt
codes/LinearConvection/09/: Grid.cpp  Grid.h  README.txt
codes/LinearConvection/10/: Grid.cpp  Grid.h  main.cpp
codes/LinearConvection/11/: Grid.cpp  Grid.h  README.txt  computeGpu.h
codes/LinearConvection/12/: Grid.cpp  Grid.h  README.txt
codes/LinearConvection/13/: Grid.cpp  Grid.h  README.txt  main.cpp
codes/LinearConvection/14/: CMakeLists.txt  Grid.cpp  Grid.h  README.txt
codes/LinearConvection/15/: Grid.cpp  Grid.h
codes/LinearConvection/16/: Grid.cpp  Grid.h
codes/LinearConvection/17/: Grid.cpp  Grid.h  README.txt
codes/LinearConvection/18/: Grid.cpp  Grid.h
codes/LinearConvection/19/: Grid.cpp  Grid.h  README.txt
codes/LinearConvection/20/: Grid.cpp  Grid.h  README.txt  addConstantGpu.cu
codes/LinearConvection/21/: Grid.cpp  Grid.h  README.txt
codes/LinearConvection/22/: Grid.cpp  Grid.h
codes/LinearConvection/23/: Grid.cpp  Grid.h  main.cpp
codes/LinearConvection/24/: Grid.cpp  Grid.h  main.cpp
codes/LinearConvection/25/: Cmpi.cpp  Cmpi.h  Grid.cpp  Grid.h  main.cpp
codes/LinearConvection/26/: Cmpi.h  Grid.cpp  Grid.h  main.cpp
codes/LinearConvection/27/: Grid.cpp  Grid.h  main.cpp
codes/LinearConvection/28/: CMakeLists.txt  Grid.cpp  Grid.h  main.cpp
codes/LinearConvection/29/: CMakeLists.txt  Cmpi.cpp  README.txt  Simu.cpp  Simu.h  main.cpp
codes/LinearConvection/30/: GpuSimu.cpp  GpuSimu.h  main.cpp
codes/LinearConvection/31/: CMakeLists.txt  Cmpi.cpp  Cmpi.h  Simu.cpp  main.cpp
codes/ModernCFD/: CMakeLists.txt  CfdPara.cpp  CfdPara.h  Geom.cpp  Geom.h  GpuSimu.cpp  Grid.cpp  Grid.h  README.txt  Simu.cpp  Simu.h  Solver.cpp  Solver.cu  Solver.h  SolverDetail.cpp  SolverDetail.h  SolverDetailCuda.cu  addConstantGpu.cu  computeGpu.cu  main.cpp
codes/ModernCFD/cmake/: util.cmake
codes/ModernCFD/codes/: CMakeLists.txt  Cmpi.cpp  Cmpi.h  Geom.cpp  Solver.h  SolverDetailCpu.cpp
codes/ModernCFD/codes/geometry/include/: Geom.h  Grid.h
codes/ModernCFD/codes/geometry/src/: Grid.cpp
codes/ModernCFD/codes/main/include/: Simu.h
codes/ModernCFD/codes/main/src/: Simu.cpp
codes/ModernCFD/codes/solver/include/: SolverDetailCpu.h  SolverDetailCuda.h
codes/ModernCFD/codes/solver/src/: Solver.cpp  SolverDetail.cpp  SolverDetailCuda.cu
codes/cuda/nocuda/01/: CMakeLists.txt  README.txt  main.cu
codes/cuda/nocuda/02/: CMakeLists.txt
codes/cuda/nocuda/03/: CMakeLists.txt  README.txt  main.cu
codes/cuda/nocuda/04/: CMakeLists.txt  README.txt
codes/cuda/nocuda/05/: CMakeLists.txt
codes/cuda/nocuda/06/: CMakeLists.txt  main.cpp  sub.cu  sub.h
codes/cuda/nocuda/07/: CMakeLists.txt  README.txt  main.cpp  print.cpp  print.h  print_cuda.cu  print_cuda.h
codes/hybrid/mpi_openmp/01/: main.cpp
codes/hybrid/mpi_openmp/01a/: CMakeLists.txt  README.txt  main.cpp
codes/hybrid/mpi_openmp/02/: main.cpp
codes/hybrid/mpi_openmp/03/: README.txt
codes/hybrid/mpi_openmp/03a/: README.txt  main.cpp
codes/hybrid/mpi_openmp/04/: README.txt  main.cpp
codes/hybrid/mpi_openmp/04a/: README.txt
codes/hybrid/mpi_openmp/05/: main.cpp
codes/hybrid/mpi_openmp/05b/: README.txt  main.cpp
codes/hybrid/mpi_openmp/05c/: README.txt  main.cpp
codes/hybrid/mpi_openmp/06a/: CMakeLists.txt  README.txt  main.cpp
codes/hybrid/mpi_openmp/07/: main.cpp
codes/hybrid/mpi_openmp/07a/: README.txt  main.cpp
codes/hybrid/mpi_openmp/08/: CMakeLists.txt  main.cpp
codes/hybrid/mpi_openmp/09/: main.cpp
codes/hybrid/mpi_openmp/09a/: main.cpp
codes/hybrid/mpi_openmp/10/: README.txt  main.cpp
codes/mpi/MPI_Init_thread/01/: main.cpp
codes/mpi/init/01/: CMakeLists.txt  README.txt
codes/mpi/init/02/: main.cpp
codes/openmp/parallel_for/01/: main.cpp
codes/openmp/thread_num/01/: main.cpp
codes/openmp/thread_num/02/: CMakeLists.txt  main.cpp
codes/tools/divide/01/: README.txt  main.cpp
codes/tools/divide/02/: main.cpp
